[package]
name = "heart"
version = "0.1.7"
edition = "2021"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
description = "Hypermedia-based web development of the 1990 future!"
license = "Fair"
repository = "https://github.com/luciusmagn/heart"
homepage = "https://github.com/luciusmagn/heart"

[dependencies]
ergokv = "0.1.7"
maud = { version = "0.26.0", features = ["warp"] }
tikv-client = "0.3.0"
tracing = "0.1.40"
warp = "0.3.7"
